hir/src/snapshots/transmute_hir__hir_print__tests__perimeter_lit_struct.snap
---
source: hir/src/hir_print.rs
expression: s
---
                      +- stmt:0
=    sid:1     tid:1     +- Namespace name=<root>
                            +- stmt:1
=    sid:2     tid:1        |  +- Namespace name=core
                            |     +- stmts=[]
                            +- stmt:6
=   sid:12     tid:8        |  +- Struct name=Point
=   sid:38     tid:4        |     +- x: number
=   sid:39     tid:4        |     +- y: number
                            +- stmt:7
=   sid:13     tid:9        |  +- Struct name=Square
=   sid:40     tid:8        |     +- a: Point
=   sid:41     tid:8        |     +- b: Point
                            +- stmt:11
=   sid:36    tid:20        |  +- Fn name=perimeter
                            |     +- annotations=[]
                            |     +- params
=   sid:42     tid:9        |     |  +- square: Square
@              tid:2        |     +- ret=number
@              tid:2        |     +- body:expr:21
@              tid:2        |        +- Block
                            |           +- stmt:8
=   sid:43     tid:4        |           |  +- Let name=width
@              tid:4        |           |     +- expr:6
@              tid:4        |           |        +- Call
@             tid:10        |           |           +- callee:expr:47
@   sid:17    tid:10        |           |           |  +- Ident: sub
                            |           |           +- params
@              tid:4        |           |              +- expr:2
@   sid:38     tid:4        |           |              |  +- Access
@              tid:8        |           |              |     +- lhs:expr:1
@   sid:41     tid:8        |           |              |     |  +- Access
@              tid:9        |           |              |     |     +- lhs:expr:0
@   sid:42     tid:9        |           |              |     |     |  +- Ident: square
@   sid:41     tid:8        |           |              |     |     +- ident=b
@   sid:38     tid:4        |           |              |     +- ident=x
@              tid:4        |           |              +- expr:5
@   sid:38     tid:4        |           |                 +- Access
@              tid:8        |           |                    +- lhs:expr:4
@   sid:40     tid:8        |           |                    |  +- Access
@              tid:9        |           |                    |     +- lhs:expr:3
@   sid:42     tid:9        |           |                    |     |  +- Ident: square
@   sid:40     tid:8        |           |                    |     +- ident=a
@   sid:38     tid:4        |           |                    +- ident=x
                            |           +- stmt:9
=   sid:44     tid:4        |           |  +- Let name=height
@              tid:4        |           |     +- expr:13
@              tid:4        |           |        +- Call
@             tid:10        |           |           +- callee:expr:48
@   sid:17    tid:10        |           |           |  +- Ident: sub
                            |           |           +- params
@              tid:4        |           |              +- expr:9
@   sid:39     tid:4        |           |              |  +- Access
@              tid:8        |           |              |     +- lhs:expr:8
@   sid:41     tid:8        |           |              |     |  +- Access
@              tid:9        |           |              |     |     +- lhs:expr:7
@   sid:42     tid:9        |           |              |     |     |  +- Ident: square
@   sid:41     tid:8        |           |              |     |     +- ident=b
@   sid:39     tid:4        |           |              |     +- ident=y
@              tid:4        |           |              +- expr:12
@   sid:39     tid:4        |           |                 +- Access
@              tid:8        |           |                    +- lhs:expr:11
@   sid:40     tid:8        |           |                    |  +- Access
@              tid:9        |           |                    |     +- lhs:expr:10
@   sid:42     tid:9        |           |                    |     |  +- Ident: square
@   sid:40     tid:8        |           |                    |     +- ident=a
@   sid:39     tid:4        |           |                    +- ident=y
                            |           +- stmt:10
@              tid:4        |              +- Ret
@              tid:4        |                 +- expr:20
@              tid:4        |                    +- Call
@             tid:10        |                       +- callee:expr:51
@   sid:29    tid:10        |                       |  +- Ident: add
                            |                       +- params
@              tid:4        |                          +- expr:16
@              tid:4        |                          |  +- Call
@             tid:10        |                          |     +- callee:expr:49
@   sid:21    tid:10        |                          |     |  +- Ident: mul
                            |                          |     +- params
@              tid:4        |                          |        +- expr:14
@   sid:43     tid:4        |                          |        |  +- Ident: width
@              tid:4        |                          |        +- expr:15
@              tid:4        |                          |           +- Number: 2
@              tid:4        |                          +- expr:19
@              tid:4        |                             +- Call
@             tid:10        |                                +- callee:expr:50
@   sid:21    tid:10        |                                |  +- Ident: mul
                            |                                +- params
@              tid:4        |                                   +- expr:17
@   sid:44     tid:4        |                                   |  +- Ident: height
@              tid:4        |                                   +- expr:18
@              tid:4        |                                      +- Number: 2
                            +- stmt:14
=   sid:37    tid:21        |  +- Fn name=main
                            |     +- annotations=[]
                            |     +- params=[]
@              tid:1        |     +- ret=[]
@              tid:2        |     +- body:expr:40
@              tid:2        |        +- Block
                            |           +- stmt:12
=   sid:45     tid:4        |           |  +- Let name=n
@              tid:4        |           |     +- expr:28
@              tid:4        |           |        +- Call
@             tid:18        |           |           +- callee:expr:22
@   sid:34    tid:18        |           |           |  +- Ident: number_parse
                            |           |           +- params
@              tid:7        |           |              +- expr:27
@              tid:7        |           |                 +- Call
@             tid:16        |           |                    +- callee:expr:23
@   sid:32    tid:16        |           |                    |  +- Ident: list_get
                            |           |                    +- params
@              tid:6        |           |                       +- expr:25
@              tid:6        |           |                       |  +- Call
@             tid:15        |           |                       |     +- callee:expr:24
@   sid:31    tid:15        |           |                       |     |  +- Ident: args
                            |           |                       |     +- params=[]
@              tid:4        |           |                       +- expr:26
@              tid:4        |           |                          +- Number: 1
                            |           +- stmt:13
@              tid:1        |              +- Ret
@              tid:1        |                 +- expr:39
@              tid:1        |                    +- Call
@             tid:17        |                       +- callee:expr:29
@   sid:33    tid:17        |                       |  +- Ident: print
                            |                       +- params
@              tid:4        |                          +- expr:38
@              tid:4        |                             +- Call
@             tid:20        |                                +- callee:expr:30
@   sid:36    tid:20        |                                |  +- Ident: perimeter
                            |                                +- params
@              tid:9        |                                   +- expr:37
@   sid:13     tid:9        |                                      +- StructInstantiate name=Square
@   sid:40     tid:8        |                                         +- field name=a
@              tid:8        |                                         |  +- expr:33
@   sid:12     tid:8        |                                         |     +- StructInstantiate name=Point
@   sid:38     tid:4        |                                         |        +- field name=x
@              tid:4        |                                         |        |  +- expr:31
@              tid:4        |                                         |        |     +- Number: 0
@   sid:39     tid:4        |                                         |        +- field name=y
@              tid:4        |                                         |           +- expr:32
@              tid:4        |                                         |              +- Number: 0
@   sid:41     tid:8        |                                         +- field name=b
@              tid:8        |                                            +- expr:36
@   sid:12     tid:8        |                                               +- StructInstantiate name=Point
@   sid:38     tid:4        |                                                  +- field name=x
@              tid:4        |                                                  |  +- expr:34
@   sid:45     tid:4        |                                                  |     +- Ident: n
@   sid:39     tid:4        |                                                  +- field name=y
@              tid:4        |                                                     +- expr:35
@   sid:45     tid:4        |                                                        +- Ident: n
                            +- stmt:21
=    sid:3     tid:1           +- Namespace name=std
                                  +- stmt:15
=   sid:11     tid:1              |  +- Annotation name=native
                                  +- stmt:16
=    sid:4     tid:1              |  +- Namespace name=booleans
                                  |     +- stmt:29
=   sid:30    tid:14              |        +- Fn name=print (native)
                                  |           +- annotations
@   sid:11     tid:1              |           |  +- std.native
                                  |           +- params
=   sid:46     tid:3              |           |  +- b: core.boolean
@              tid:1              |           +- ret=[]
                                  +- stmt:17
=    sid:5     tid:1              |  +- Namespace name=env
                                  |     +- stmt:28
=   sid:31    tid:15              |        +- Fn name=args (native)
                                  |           +- annotations
@   sid:11     tid:1              |           |  +- std.native
                                  |           +- params=[]
@              tid:6              |           +- ret=std.list.List
                                  +- stmt:18
=    sid:6     tid:1              |  +- Namespace name=list
                                  |     +- stmt:26
=    sid:7     tid:6              |     |  +- Struct name=List (native)
                                  |     +- stmt:27
=   sid:32    tid:16              |        +- Fn name=list_get (native)
                                  |           +- annotations
@   sid:11     tid:1              |           |  +- std.native
                                  |           +- params
=   sid:47     tid:6              |           |  +- list: List
=   sid:48     tid:4              |           |  +- index: number
@              tid:7              |           +- ret=std.str.string
                                  +- stmt:19
=    sid:8     tid:1              |  +- Namespace name=numbers
                                  |     +- stmt:24
=   sid:33    tid:17              |     |  +- Fn name=print (native)
                                  |     |     +- annotations
@   sid:11     tid:1              |     |     |  +- std.native
                                  |     |     +- params
=   sid:49     tid:4              |     |     |  +- n: core.number
@              tid:1              |     |     +- ret=[]
                                  |     +- stmt:25
=   sid:34    tid:18              |        +- Fn name=number_parse (native)
                                  |           +- annotations
@   sid:11     tid:1              |           |  +- std.native
                                  |           +- params
=   sid:50     tid:7              |           |  +- s: std.str.string
@              tid:2              |           +- ret=core.number
                                  +- stmt:20
=    sid:9     tid:1                 +- Namespace name=str
                                        +- stmt:22
=   sid:10     tid:7                    |  +- Struct name=string (native)
                                        +- stmt:23
=   sid:35    tid:19                       +- Fn name=print (native)
                                              +- annotations
@   sid:11     tid:1                          |  +- std.native
                                              +- params
=   sid:51     tid:7                          |  +- s: string
@              tid:1                          +- ret=[]

--- types ---
tid:0     invalid
tid:1     void
tid:2     none
tid:3     boolean
tid:4     number
tid:5     type
tid:6     struct sid:7
tid:7     struct sid:10
tid:8     struct sid:12
tid:9     struct sid:13
tid:10    f(4, 4): 4
tid:11    f(4, 4): 3
tid:12    f(3, 3): 3
tid:13    f(4): 4
tid:14    f(3): 1
tid:15    f(): 6
tid:16    f(6, 4): 7
tid:17    f(4): 1
tid:18    f(7): 4
tid:19    f(7): 1
tid:20    f(9): 4
tid:21    f(): 1

--- structs ---
sid:7     List
sid:10    string
sid:12    Point
sid:13    Square
